2006-03-30  Marius Vollmer  <marius.vollmer@nokia.com>

	* hildon-navigator/osso-manager.c (osso_manager_infoprint): Free
	  retval

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/home-select-applet-dialog.c: Localize the applet
	  name (Closes N#25271)

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c, hildon-navigator/others-menu.c:
	  fixed numerous (and big) memory leaks in menu generation.

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.h: Fixed L10n of the
	  set background dialog title (id has changed in the UI spec).

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-main.c: (Closes N#23928)
      - Add defines for watchfile name
      - (task_navigator_deinitialize): Remove watchfiles

2006-03-29  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: (Closes N#19498)
	  - Add a callback for hardware events
	  - when told to lower our activity, put the applets in background
	    mode

2006-03-29  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator and Status bar are accessible when Home
	is in Layout mode" (Closes N#23028)
	* hildon-home/layout-manager.c:
	  - Added dbus calls to statusbar and tasknav to dim/undim.
	* hildon-status-bar/hildon-status-bar-main.c :
	  - added to method rpc_cb the code to handle insensitivity dbus calls 
	  - added the methods that do the actual insensitivity
	* hildon-navigator/hildon-navigator-main.c:
	  - added functions to handle the sensitivity
	* hildon-navigator/hn-wm.c:
	  - modified listening functions to listen to new type of signals

2006-03-29  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/application-switcher.c
	  (application_switcher_initialize_menu): Refactor toggle button signal
      connection into ...
	  (as_toggle_button_connect): ... here. New function.

2006-03-29  Johan Bilien <johan.bilien@nokia.com>
