@@ -52,3 +52,6 @@ home_image_loader_LDADD = $(GDK_LIBS) $(GNOME_VFS_LIBS) $(GCONF_LIBS) $(OSSO_LIB
 
 hildon_home_pluginincludeinstdir=$(includedir)/hildon-home-plugin
 hildon_home_pluginincludeinst_DATA = hildon-home-plugin-interface.h
+
+hildon_home_backup_script_SCRIPTS=hildon-home-restore-background.sh
+hildon_home_backup_scriptdir=$(sysconfdir)/osso-backup/restore.d/it2006
